...
                android:layout_weight="1"
                android:text="@string/result_points"
                android:textColor="@color/smoke"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/pointsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/smoke"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/editPoints"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button_tiny"
                android:gravity="center"
                android:paddingStart="10dp"
...
